# cormen-solutions

./: CMakeLists.txt
chapter_04/4.1-2/: main.c
chapter_04/4.1-3/: main.c
lib/chapter_04/: max_sum_subarr.h
src/chapter_04/: max_sum_subarr.c
